
SUBDIRS = wxJSON

if USE_SWE_BUILTIN
SUBDIRS += swe
endif USE_SWE_BUILTIN

if USE_WXSQLITE_BUILTIN
SUBDIRS += wxsqlite3
endif USE_WXSQLITE_BUILTIN

SUBDIRS += base jyotish dialogs atlas pics fonts resources

if USE_WXPDFDOC_BUILTIN
SUBDIRS += wxpdfdoc
endif USE_WXPDFDOC_BUILTIN

SUBDIRS += views gui

EXTRA_DIST = Makefile.win 

